<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CustomerServiceClient</string>
    <string name="action_settings">Settings</string>
    <string name="soap_service">SOAP Service</string>
    <string name="rest_service">REST Service</string>
    <string name="copyright">Florian Grill | \u00A9 2014</string>
    <string name="title_activity_service">Service Service</string>
    <string name="customer">Customers</string>
    <string name="add_customer">Add customer</string>
    <string name="refresh_customers">Refresh customers</string>
    <string name="title_activity_add_customer">AddCustomerActivity</string>
    <string name="customer_name">Customer name:</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="fetching_data">Fetching data</string>
    <string name="title_activity_delete_customer">DeleteCustomerActivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_customer">Delete customer: </string>
    <string name="add_order">Add order</string>
    <string name="refresh_order">Refresh order</string>
    <string name="delete_order">Delete order</string>
    <string name="product_1">Product 1</string>
    <string name="product_2">Product 2</string>
    <string name="product_3">Product 3</string>
    <string name="product_4">Product 4</string>
    <string name="save">Save</string>
    <string name="customer_orders">Orders from </string>
    <string name="title_activity_enter_ip_address">EnterIpAddressActivity</string>
    <string name="set_ip">Set IP</string>
    <string name="enter_ip_address">Enter IP address:</string>
    <string name="configure_ip">Configure IP</string>

</resources>
