<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#3e3939"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/customer_name"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="text"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnSaveCustomer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnCancel"
            android:layout_alignBottom="@+id/btnCancel"
            android:layout_alignRight="@+id/editTextCustomerName"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextCustomerName"
            android:layout_below="@+id/editTextCustomerName"
            android:layout_marginTop="20dp"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>
