<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#3e3939"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <RelativeLayout
            android:id="@+id/aboveContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/belowContainer"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <RelativeLayout
                android:id="@+id/relativeLayoutAboveStandard"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/txtCustomerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/customer_orders"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center" />

                <RelativeLayout
                    android:id="@+id/RelativeLayoutTop"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/txtCustomerName"
                    android:background="@drawable/border" >

                    <ListView
                        android:id="@+id/listViewOrders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:divider="@null"
                        android:dividerHeight="2dp"
                        android:padding="10dp">

                    </ListView>
                </RelativeLayout>
            </RelativeLayout>

            <ScrollView
                android:id="@+id/scrollLayoutAboveAddOrder"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">


                    <TextView
                        android:id="@+id/txtAddOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/add_order"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/textProduct1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:layout_marginTop="30dp"
                        android:text="@string/product_1"
                        android:textColor="#FFFFFF"
                        android:layout_below="@+id/txtAddOrder"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <EditText
                        android:id="@+id/editTxtProduct1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textProduct1"
                        android:layout_centerHorizontal="true"
                        android:inputType="text"
                        android:ems="10"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp" />

                    <TextView
                        android:id="@+id/textProduct2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/product_2"
                        android:textColor="#FFFFFF"
                        android:layout_below="@+id/editTxtProduct1"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <EditText
                        android:id="@+id/editTxtProduct2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textProduct2"
                        android:layout_centerHorizontal="true"
                        android:inputType="text"
                        android:ems="10"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp" />

                    <TextView
                        android:id="@+id/textProduct3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/product_3"
                        android:textColor="#FFFFFF"
                        android:layout_below="@+id/editTxtProduct2"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <EditText
                        android:id="@+id/editTxtProduct3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textProduct3"
                        android:layout_centerHorizontal="true"
                        android:inputType="text"
                        android:ems="10"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp" />

                    <TextView
                        android:id="@+id/textProduct4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/product_4"
                        android:textColor="#FFFFFF"
                        android:layout_below="@+id/editTxtProduct3"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <EditText
                        android:id="@+id/editTxtProduct4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textProduct4"
                        android:layout_centerHorizontal="true"
                        android:inputType="text"
                        android:ems="10"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp" />


                </RelativeLayout>
            </ScrollView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/belowContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowStandard"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnRefreshOrders"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/refresh_order" />

                <Button
                    android:id="@+id/btnAddOrder"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:text="@string/add_order" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowDelete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnCancelDeleteOrder"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnDeleteOrder"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:text="@string/delete_order" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowAddOrders"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnCancelAddOrder"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnCreateOrder"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:text="@string/save" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
