<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/relativeLayoutBelow"
        android:background="@drawable/border" >

        <TextView
            android:id="@+id/title_Server"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/customer"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listViewCustomer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:dividerHeight="2dp"
            android:layout_marginTop="30dp"
            android:padding="10dp">
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutBelow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/btnAddCustomer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_customer"
            android:background="@drawable/large_grey_button"
            android:textColor="#FFFFFF"
            android:contentDescription="@null"
            android:src="@null" />

        <Button
            android:id="@+id/btnRefreshCustomers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAddCustomer"
            android:text="@string/refresh_customers"
            android:background="@drawable/large_grey_button"
            android:textColor="#FFFFFF"
            android:contentDescription="@null"
            android:src="@null" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        style="@style/GenericProgressBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:visibility="gone" >

        <ProgressBar
            style="@style/GenericProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:weightSum="2.0" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0" >

            <TextView
                android:id="@+id/txtFetching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/fetching_data"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0" >
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
