<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/app_background">

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/image" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" >

                <ImageButton
                    android:id="@+id/btnSoap"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@drawable/soap_button"/>

                <ImageButton
                    android:id="@+id/btnRest"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@drawable/rest_button" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/joystickText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:gravity="center"
                    android:text="@string/soap_service"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:gravity="center"
                    android:text="@string/rest_service"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" >
                </TextView>
            </TableRow>





            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp" >

                <ImageButton
                    android:id="@+id/btnSettings"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@drawable/settings_button"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/settingsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:gravity="center"
                    android:text="@string/configure_ip"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" >
                </TextView>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

</RelativeLayout>
